🐛 Fix: scrollbar

--- a/src/app/components/markup/markup.component.css
+++ b/src/app/components/markup/markup.component.css
@@ -50,7 +50,7 @@ textarea {
   border: 0px;
   height: 100%;
   resize: none;
-  width: 100%;
+  width: 99%;
   padding: 25px;
 }
 
