--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-body[class='dark-mode'] {
+body[class="dark-mode"] {
   --bg: #0f1119;
   --text: #fff;
   --text-color: #718096;
@@ -17,16 +17,18 @@ body[class='dark-mode'] {
   --note-main-text: #e2e8f0;
   --note-sub-text: #718096;
   --modal-bg: #1a202c;
-  --split-img: url('/assets/more-vertical.svg');
+  --split-img: url("/assets/more-vertical.svg");
 
   --blockquote: #ededed12;
 
   --table-odd: #090b0f;
   --table-even: #0f111a;
   --table-border: #333;
+
+  --scrollbar: #191c25;
 }
 
-body[class='light-mode'] {
+body[class="light-mode"] {
   --bg: #fff;
   --text: #212121;
   --shadow: rgba(0, 0, 0, 0.04);
@@ -42,16 +44,17 @@ body[class='light-mode'] {
   --note-main-text: #4a5568;
   --note-sub-text: #a0aec0;
   --modal-bg: #3b434f;
-  --split-img: url('/assets/more-vertical-light.svg');
+  --split-img: url("/assets/more-vertical-light.svg");
   --blockquote: #edf2f6;
 
   --table-odd: #f7fafc;
   --table-even: #edf2f7;
   --table-border: #a0aec0;
+  --scrollbar: #f5f5f5;
 }
 
 * {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 ::selection {
@@ -64,7 +67,7 @@ button:focus {
 
 html,
 body {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   background: var(--bg);
   overflow: hidden;
   color: var(--text);
@@ -261,4 +264,27 @@ button:disabled {
 
 .close-icon {
   font-size: 30px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--scrollbar);
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: var(--scrollbar);
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+.as-split-area:nth-child(1) {
+  overflow: hidden !important;
+  margin-right: -10px;
+}
+.as-split-area:nth-child(2) {
+  margin-left: 10px;
 }
